# lyra_robot

./: .gitignore  README.md  deep-research-report.md  fastdds_no_shm.xml  lyra_robot_guide.md  research.md
config/lyragraph/: home_regions.yaml  ontology.yaml  perception.yaml
create3_sim/irobot_create_common/irobot_create_common_bringup/rviz/: irobot_create_view.rviz
create3_sim/irobot_create_common/irobot_create_control/config/: control.yaml
create3_sim/irobot_create_common/irobot_create_description/urdf/: create3.urdf.xacro
create3_sim/irobot_create_common/irobot_create_description/urdf/sensors/: rgbd_camera.urdf.xacro
create3_sim/irobot_create_gz/irobot_create_gz_bringup/: package.xml
create3_sim/irobot_create_gz/irobot_create_gz_bringup/launch/: create3_gz.launch.py  create3_ros_gz_bridge.launch.py  create3_spawn.launch.py
create3_sim/irobot_create_gz/irobot_create_gz_plugins/Create3Hmi/: CMakeLists.txt  Create3Hmi.cc  Create3Hmi.hh
lyra_behavior/: package.xml
lyra_home_gz/: CMakeLists.txt  package.xml
lyra_home_gz/launch/: _home.launch.xml  simulation.launch.xml
lyra_home_gz/world/: home.world
lyra_navigation/launch/: navigation.launch.py  rviz.launch.py
lyra_navigation/params/: nav2_params.yaml
lyra_navigation/rviz/: nav2.rviz
lyra_perception/: CMakeLists.txt  package.xml
lyra_robot/: CMakeLists.txt  package.xml
lyra_slam/: CMakeLists.txt
lyra_slam/config/: mapper_params_lifelong.yaml
lyra_slam/launch/: carto_slam.launch.py  lifelong_mapping.launch.py  slam_lifelong.launch.py
lyra_slam/maps/: map_1738415804.pgm  map_1738415804.yaml  map_1738526783.pgm
lyra_slam/rviz/: nav2.rviz
src/create3_sim/irobot_create_common/irobot_create_description/urdf/sensors/: lidar.urdf.xacro
src/create3_sim/irobot_create_common/irobot_create_toolbox/: CMakeLists.txt
src/create3_sim/irobot_create_gz/irobot_create_gz_bringup/launch/: sim.launch.py
src/create3_sim/irobot_create_gz/irobot_create_gz_plugins/: CMakeLists.txt
src/lyra_behavior/: CMakeLists.txt
src/lyra_home_gz/: CMakeLists.txt
src/lyra_home_gz/floorplans/: home.building.yaml
src/lyra_home_gz/launch/: common.launch.xml
src/lyra_home_gz/scripts/: fix_generated_world.py
src/lyra_navigation/: CMakeLists.txt  package.xml
src/lyra_navigation/launch/: navigation.launch.py  rviz.launch.py
src/lyra_navigation/params/: nav2_params.yaml
src/lyra_navigation/rviz/: nav2.rviz
src/lyra_perception/launch/: rgbd_probe.launch.py
src/lyra_perception/lyra_perception/: rgbd_probe.py
src/lyra_perception/scripts/: rgbd_probe_node
src/lyra_robot/: package.xml
src/lyra_slam/: CMakeLists.txt  package.xml
src/lyra_slam/config/: carto_slam.lua
src/lyra_slam/maps/: map_1738526783.yaml
src/lyragraph_bringup/: CMakeLists.txt  package.xml
src/lyragraph_bringup/launch/: semantic_runtime.launch.py
src/lyragraph_fusion/: CMakeLists.txt  package.xml
src/lyragraph_fusion/lyragraph_fusion/: build_graph.py
src/lyragraph_fusion/scripts/: build_graph
src/lyragraph_keyframe_logger/: CMakeLists.txt  package.xml
src/lyragraph_keyframe_logger/launch/: keyframe_logger.launch.py
src/lyragraph_keyframe_logger/lyragraph_keyframe_logger/: keyframe_logger.py
src/lyragraph_keyframe_logger/scripts/: keyframe_logger_node
src/lyragraph_msgs/: CMakeLists.txt  package.xml
src/lyragraph_msgs/msg/: GraphObject.msg  GraphObjectArray.msg  GraphRegion.msg  GraphRegionArray.msg
src/lyragraph_msgs/srv/: QueryGraph.srv  ResolveSemanticGoal.srv
src/lyragraph_nav_bridge/: CMakeLists.txt  package.xml
src/lyragraph_nav_bridge/launch/: nav_bridge.launch.py
src/lyragraph_nav_bridge/lyragraph_nav_bridge/: nav_bridge_node.py
src/lyragraph_nav_bridge/scripts/: nav_bridge_node
src/lyragraph_perception/: CMakeLists.txt  package.xml
src/lyragraph_perception/lyragraph_perception/: build_detections.py
src/lyragraph_perception/scripts/: build_detections
src/lyragraph_store/: CMakeLists.txt  package.xml
src/lyragraph_store/launch/: graph_store.launch.py
src/lyragraph_store/lyragraph_store/: graph_store_node.py
src/lyragraph_store/scripts/: graph_store_node
