<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lyragraph_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for LyraGraph semantic navigation.</description>
  <maintainer email="proxi666@example.com">proxi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>lyragraph_nav_bridge</exec_depend>
  <exec_depend>lyragraph_store</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
