<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lyragraph_nav_bridge</name>
  <version>0.1.0</version>
  <description>Language-to-Nav2 bridge for LyraGraph semantic navigation.</description>
  <maintainer email="proxi666@example.com">proxi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>lyragraph_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
